--- a/module5_solution/snippets/home-snippet.html
+++ b/module5_solution/snippets/home-snippet.html
@@ -8,9 +8,9 @@
   
   <div class="col-md-4 col-sm-6 col-xs-12">
     <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});">
-        <div id="special-list"><span>Special Menu</span></div></a></div>
+        <div id="specials-list"><span>Special Menu</span></div></a></div>
       <div class="col-md-4 col-sm-12 col-sm-12">
         <a href="https://goo.gl/maps/fV2NrPgZKJgaEWiP6" target="_blank">
           <div id ="map-title"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.6752464053475!2d-76.71387678522164!3d39.363590279501445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1sen!2sin!4v1596179620975!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe><span>Map</span></div></a></div>
         </div>
-        </div>
+       
